@@ -3,6 +3,8 @@ package com.supermarket.backend.security;
 import com.supermarket.backend.repository.UserRepository;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.http.HttpMethod;
+import org.springframework.security.config.Customizer;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.core.userdetails.User;
@@ -15,6 +17,7 @@ import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 
+import java.util.Arrays;
 import java.util.List;
 
 @Configuration
@@ -36,7 +39,7 @@ public class SecurityConfig {
     public UserDetailsService userDetailsService() {
         return username -> {
             com.supermarket.backend.model.User user = userRepository.findByUsername(username)
-                    .orElseThrow(() -> new UsernameNotFoundException("Staff member not found: " + username));
+                    .orElseThrow(() -> new UsernameNotFoundException("User not found"));
             return User.builder()
                     .username(user.getUsername())
                     .password(user.getPassword())
@@ -48,40 +51,39 @@ public class SecurityConfig {
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
-                // 1. Ruhusu CORS (Maelekezo yapo chini kwenye Bean ya corsConfigurationSource)
-                .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                // 2. Disable CSRF kwa sababu tunatumia API (stateless)
+                // 1. MUST BE FIRST: Apply CORS configuration
+                .cors(Customizer.withDefaults())
                 .csrf(csrf -> csrf.disable())
                 .authorizeHttpRequests(auth -> auth
-                        // 3. Ruhusu kila kitu kwenye /api/auth/** na ruhusu OPTIONS (Preflight)
-                        .requestMatchers(org.springframework.http.HttpMethod.OPTIONS, "/**").permitAll()
+                        // 2. EXPLICITLY PERMIT ALL OPTIONS REQUESTS (The Preflight Fix)
+                        .requestMatchers(HttpMethod.OPTIONS, "/**").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/api/products/**").permitAll()
                         .requestMatchers("/api/sales/**").permitAll()
                         .requestMatchers("/api/dashboard/**").permitAll()
                         .anyRequest().authenticated()
-                );
+                )
+                .httpBasic(Customizer.withDefaults());
+
         return http.build();
     }
 
+    // 3. THE GLOBAL CORS SOURCE (High Priority)
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
 
-        // HAPA WEKA URL YAKO YA NETLIFY BILA "/" MWISHONI
+        // Add your EXACT Netlify domain and local dev domain
+        // IMPORTANT: NO TRAILING SLASH AT THE END OF THE URL
         configuration.setAllowedOrigins(List.of(
                 "https://oka-oven.netlify.app",
                 "http://localhost:5173"
         ));
 
-        // Ruhusu amri zote muhimu
-        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
-
-        // Ruhusu header zote (Content-Type, Authorization, nk)
-        configuration.setAllowedHeaders(List.of("*"));
-
-        // Ruhusu cookies/credentials kama zikihitajika
+        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS", "PATCH"));
+        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Cache-Control", "Content-Type"));
         configuration.setAllowCredentials(true);
+        configuration.setExposedHeaders(List.of("Authorization"));
 
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
